@@ -1,24 +1,10 @@
 from ftw.builder import Builder
 from ftw.builder import create
 from ftw.subsite.testing import FTW_SUBSITE_FUNCTIONAL_TESTING
+from ftw.subsite.tests.helpers import introduce_language_subsites
 from ftw.subsite.tests.pages import LanguageSwitcher
 from ftw.testbrowser import browsing
 from unittest2 import TestCase
-from z3c.relationfield import RelationValue
-from zope.component import getUtility
-from zope.intid.interfaces import IIntIds
-import transaction
-
-
-def introduce_language_subsites(*subsites):
-    intids = getUtility(IIntIds)
-
-    for subsite in subsites:
-        ids = [intids.getId(obj) for obj in subsites]
-        ids.remove(intids.getId(subsite))
-        subsite.language_references = [RelationValue(id_) for id_ in ids]
-
-        transaction.commit()
 
 
 class TestLanguageSwitcher(TestCase):
