@@ -4,3 +4,4 @@ extensions = mr.developer
 
 auto-checkout =
     ftw.simplelayout
+    ftw.mobile
